# python-minizinc-maker

./: CITATION.cff  LICENSE  README.md  _main.fzn  _main.mzn  _main.ozn  bibd.mzn  bibd.py  gcnstr.py  lib.py  main.fzn  main.mzn  main.ozn  main.py  main2.fzn  model.fzn  model.mzn  model.ozn  nqueens.py  out.mzn  pymzm-0.0.1-py3-none-any.whl  pymzm.py  pyproject.toml  sat.py  test.fzn  test_lib.py  todo.txt  vars.py
docs/: conf.py
docs/source/: conf.py  index.rst
examples/: bibd.py  bin_packing.py  gcnstr.py  intfact.py  jss.mzn  magicsquare.py  nqueens.py  pr711.py  sudoku.py  vars.py  wedding_seating.py
src/pymzm/: __init__.py  constant.py  constraint.py  exceptions.py  expression.py  misc.py  model.py  variable.py
tests/: test_all.py  test_examples.py  test_expression.py  test_misc.py  test_pymzm.py  upymzm_equiv.py
tests/stress/: M.fzn  M.ozn  funcs.py  main.py  model - Kopi.mzn  model.py  py.fzn  py.mzn  py.ozn
